[gd_scene load_steps=2 format=3 uid="uid://main_menu_uid"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 72
text = "2D FORTRESS"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 48
text = "PLAY"

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.7, 0.7, 1, 1)
theme_override_font_sizes/font_size = 40
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 40
text = "QUIT"

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsTitle" type="Label" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "SETTINGS"
horizontal_alignment = 1

[node name="VolumeLabel" type="Label" parent="SettingsPanel"]
layout_mode = 1
offset_left = 50.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 24
text = "Master Volume:"

[node name="VolumeSlider" type="HSlider" parent="SettingsPanel"]
layout_mode = 1
offset_left = 220.0
offset_top = 85.0
offset_right = 520.0
offset_bottom = 105.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="FullscreenCheck" type="CheckButton" parent="SettingsPanel"]
layout_mode = 1
offset_left = 50.0
offset_top = 130.0
offset_right = 250.0
offset_bottom = 170.0
text = "Fullscreen"

[node name="HitboxLabel" type="Label" parent="SettingsPanel"]
layout_mode = 1
offset_left = 50.0
offset_top = 180.0
offset_right = 250.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 24
text = "Show Hitboxes:"

[node name="HitboxCheck" type="CheckButton" parent="SettingsPanel"]
layout_mode = 1
offset_left = 250.0
offset_top = 175.0
offset_right = 400.0
offset_bottom = 215.0
text = "Debug"

[node name="FPSLabel" type="Label" parent="SettingsPanel"]
layout_mode = 1
offset_left = 50.0
offset_top = 230.0
offset_right = 200.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 24
text = "Max FPS:"

[node name="FPSOption" type="OptionButton" parent="SettingsPanel"]
layout_mode = 1
offset_left = 220.0
offset_top = 230.0
offset_right = 350.0
offset_bottom = 265.0
selected = 2
item_count = 5
popup/item_0/text = "30"
popup/item_0/id = 0
popup/item_1/text = "60"
popup/item_1/id = 1
popup/item_2/text = "120"
popup/item_2/id = 2
popup/item_3/text = "144"
popup/item_3/id = 3
popup/item_4/text = "Unlimited"
popup/item_4/id = 4

[node name="CloseButton" type="Button" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -60.0
offset_right = 75.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "CLOSE"

